--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-persist-client": "^5.90.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-redux": "^9.2.0",
     "tailwindcss": "^4.1.16"
   },
